@@ -1,17 +1,18 @@
 package beater
 
 import (
+	"bytes"
+	"compress/gzip"
+	"encoding/json"
 	"errors"
+	"io"
 	"io/ioutil"
 	"net/http"
 	"net/http/httptest"
+	"strings"
 	"testing"
 
-	"bytes"
-
 	"github.com/stretchr/testify/assert"
-
-	"encoding/json"
 
 	"github.com/elastic/apm-server/tests"
 )
@@ -30,6 +31,71 @@ func TestDecode(t *testing.T) {
 	body, err := decodeLimitJSONData(1024 * 1024)(req)
 	assert.Nil(t, err)
 	assert.Equal(t, data, body)
+}
+
+func TestDecodeSizeLimit(t *testing.T) {
+	minimalValid := func() *http.Request {
+		req, err := http.NewRequest("POST", "_", strings.NewReader("{}"))
+		assert.Nil(t, err)
+		req.Header.Add("Content-Type", "application/json")
+		return req
+	}
+
+	// just fits
+	_, err := decodeLimitJSONData(2)(minimalValid())
+	assert.Nil(t, err)
+
+	// too large, should not be EOF
+	_, err = decodeLimitJSONData(1)(minimalValid())
+	assert.NotNil(t, err)
+	assert.NotEqual(t, err, io.EOF)
+}
+
+func TestDecodeSizeLimitGzip(t *testing.T) {
+	gzipBody := func(body string) []byte {
+		var buf bytes.Buffer
+		zw := gzip.NewWriter(&buf)
+		_, err := zw.Write([]byte("{}"))
+		assert.Nil(t, err)
+		err = zw.Close()
+		assert.Nil(t, err)
+		return buf.Bytes()
+	}
+	gzipRequest := func(body []byte) *http.Request {
+		req, err := http.NewRequest("POST", "_", bytes.NewReader(body))
+		assert.Nil(t, err)
+		req.Header.Add("Content-Type", "application/json")
+		req.Header.Add("Content-Encoding", "gzip")
+		return req
+	}
+
+	// compressed size < uncompressed (usual case)
+	bigData := `{"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa": 1}`
+	bigDataGz := gzipBody(bigData)
+	if len(bigDataGz) > len(bigData) {
+		t.Fatal("compressed data unexpectedly big")
+	}
+	/// uncompressed just fits
+	_, err := decodeLimitJSONData(40)(gzipRequest(bigDataGz))
+	assert.Nil(t, err)
+	/// uncompressed too big
+	_, err = decodeLimitJSONData(1)(gzipRequest(bigDataGz))
+	assert.NotNil(t, err)
+	assert.NotEqual(t, err, io.EOF)
+
+	// compressed size > uncompressed (edge case)
+	tinyData := "{}"
+	tinyDataGz := gzipBody(tinyData)
+	if len(tinyDataGz) < len(tinyData) {
+		t.Fatal("compressed data unexpectedly small")
+	}
+	/// uncompressed just fits
+	_, err = decodeLimitJSONData(2)(gzipRequest(tinyDataGz))
+	assert.Nil(t, err)
+	/// uncompressed too big
+	_, err = decodeLimitJSONData(1)(gzipRequest(tinyDataGz))
+	assert.NotNil(t, err)
+	assert.NotEqual(t, err, io.EOF)
 }
 
 func TestJSONFailureResponse(t *testing.T) {
